# PlantillaProyectoBase

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: plantillaNotebook.ipynb
scripts/: demo_uso.py  script_basico.py
src/nombre_proyecto/: __init__.py
src/nombre_proyecto/clases/: __init__.py  hospital.py  paciente.py
src/nombre_proyecto/utils/: __init__.py  distancias.py
tests/: test_distancias.py
