[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_proyecto"
version = "0.1.0"
description = "Plantilla para Proyecto Sistemas Inteligentes aplicados a la Salud"
authors = [{ name = "tuNombre", email = "tuCorreo@ubu.es" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]